style: fix for high contrast

--- a/src/components/sbb-autocomplete/sbb-autocomplete.scss
+++ b/src/components/sbb-autocomplete/sbb-autocomplete.scss
@@ -111,6 +111,11 @@
 .sbb-autocomplete__options {
   @include sbb.scrollbar-light;
   @include sbb.optionsOverlay;
+
+  @include sbb.if-forced-colors {
+    border: var(--sbb-border-width-1x) solid CanvasText;
+    border-top: none;
+  }
 }
 
 @keyframes open {
